refactor: add validate body
