# app/dto/base_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type BaseDtoResponse struct {
+	ResponseKey     string `json:"response_key"`
+	ResponseMessage string `json:"response_message"`
+}
