# docs/swagger.json
@@ -18,7 +18,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.LoginRequest"
+                            "$ref": "#/definitions/dto.LoginDtoRequest"
                         }
                     }
                 ],
@@ -26,7 +26,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/dto.LoginDtoResponse"
                         }
                     }
                 }
@@ -1231,6 +1231,58 @@
         }
     },
     "definitions": {
+        "dto.LoginDtoDataResponse": {
+            "type": "object",
+            "required": [
+                "refresh_token",
+                "token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string",
+                    "minLength": 1,
+                    "example": "admin"
+                },
+                "token": {
+                    "type": "string",
+                    "minLength": 1,
+                    "example": "1234"
+                }
+            }
+        },
+        "dto.LoginDtoRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "minLength": 1,
+                    "example": "1234"
+                },
+                "username": {
+                    "type": "string",
+                    "minLength": 1,
+                    "example": "admin"
+                }
+            }
+        },
+        "dto.LoginDtoResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.LoginDtoDataResponse"
+                },
+                "response_key": {
+                    "type": "string"
+                },
+                "response_message": {
+                    "type": "string"
+                }
+            }
+        },
         "gorm.DeletedAt": {
             "type": "object",
             "properties": {
@@ -1386,23 +1438,6 @@
                 },
                 "value": {
                     "type": "number"
-                }
-            }
-        },
-        "request.LoginRequest": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string",
-                    "example": "1234"
-                },
-                "username": {
-                    "type": "string",
-                    "example": "admin"
                 }
             }
         },
@@ -1901,6 +1936,9 @@
             "properties": {
                 "description": {
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
